# house_pricing_value

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  create_model.py  experimentation_notebook.ipynb  pipeline.py  pyproject.toml  test.ipynb  test_endpoint.py
data/golden/: test_data.csv  train_data.csv  val_data.csv
src/: app.py  data_engineering.py  evaluate.py  model_selection.py  train.py
