[tool.poetry]
name = "house-pricing"
version = "0.1.0"
description = ""
authors = ["loledo <60259223+loledo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.1.1"
scikit-learn = "1.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
