[tool.poetry]
name = "house-pricing"
version = "0.1.0"
description = ""
authors = ["loledo <60259223+loledo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.1.1"
scikit-learn = "1.3.1"
fastapi = "0.116.1"
hyperopt = "0.2.7"
matplotlib = "3.9.4"
pydantic = "1.10.22"
python-dotenv = "1.1.1"
Requests = "2.32.4"
starlette = "0.47.2"
xgboost = "2.1.4"
setuptools = "<81"
uvicorn = "^0.41.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
